Fixed layout problems on iOS

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -151,6 +151,20 @@
     .place-Image {
         width: 77%;
     }
+    .searchbar .icon { 
+        position: absolute;
+        top: 21%;
+        right: 0px;
+        font-size: 29px;
+        cursor: pointer;
+        color: #999999;
+        border-color: white;
+        background: transparent;
+        border-style: solid;
+    }
+    .center-nav-bar {
+        margin-right: -3.7rem  !important;
+    }
     .card {
         margin-top: 10px;
         height: 0%;
